<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">四叶草知识手册</string>
    <string name="app_version">0.01</string>

    <!-- 图标字符 -->
    <string name="icon_chevron_left">&#xf053;</string>
    <string name="icon_chevron_right">&#xf054;</string>
    <string name="icon_chevron_circle_left">&#xf137;</string>
    <string name="icon_chevron_circle_right">&#xf138;</string>

    <string name="icon_cog">&#xf013;</string>

    <string name="icon_list">&#xf03a;</string>
    <string name="icon_pencil">&#xf040;</string>
    <string name="icon_star">&#xf005;</string>
    <string name="icon_leaf">&#xf06c;</string>
    <string name="icon_lightbulb">&#xf0eb;</string>
    <string name="icon_group">&#xf0c0;</string>
    <string name="icon_plus_sign">&#xf055;</string>

    <string name="icon_home">&#xf015;</string>
    <string name="icon_envelope">&#xf0e0;</string>
    <string name="icon_info_circle">&#xf05a;</string>
    <string name="icon_pagelines">&#xf18c;</string>
    <string name="icon_pencil_square">&#xf14b;</string>

    <string name="icon_comments">&#xf086;</string>
    <string name="icon_comment">&#xf075;</string>
    <string name="icon_check">&#xf00c;</string>
    <string name="icon_times">&#xf00d;</string>
    <string name="icon_check_circle">&#xf058;</string>
    <string name="icon_times_circle">&#xf057;</string>

    <string name="icon_question_circle">&#xf059;</string>
    <string name="icon_smile_o">&#xf118;</string>

    <string name="icon_arrow_left">&#xf060;</string>
    <string name="icon_arrow_right">&#xf061;</string>
    <string name="icon_heart">&#xf004;</string>
    <string name="icon_exclamation_circle">&#xf06a;</string>
    <string name="icon_lock">&#xf023;</string>
    <string name="icon_key">&#xf084;</string>
    <string name="icon_user">&#xf007;</string>
	
    <string name="preferences_key_current_user_id">current_user_id</string>
    
    <!-- 登录页面 -->
    <string name="login_email">邮箱</string>
    <string name="login_password">密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_email_valid_blank">请输入邮箱</string>
    <string name="login_password_valid_blank">请输入密码</string>
    <string name="login_auth_fail">用户邮箱或密码错误</string>
    <string name="login_now_login">正在登录…</string>

	<string name="is_wifi_active_msg">无法连接到网络，请检查网络配置</string>
	
    <string name="tab_home">学习中心</string>

    <string name="category_home">首页</string>
    <string name="category_message">消息</string>
    <string name="category_about">关于</string>

    <!-- knowledge_net -->
    <string name="knowedge_title">知识领域选择</string>
    <string name="favourite_knowledge_list">收藏夹</string>

    <!-- questions -->
    <string name="questions_title">练习题</string>
    <string name="questions_desc">请点击“开始答题”\n逐个回答问题</string>

    <!-- note -->
    <string name="note_list_empty_tip">还没有笔记</string>
    <string name="note">笔记</string>
    <string name="add_note_home">笔记</string>
    <string name="show_note_title">显示笔记</string>
    <string name="add_note_title">创建笔记</string>
    <string name="add_img">增加图片</string>
    <string name="show_question">显示问题</string>
    <string name="show_node">显示知识节点</string>
    <string name="show_plan">显示计划</string>

    <!-- fav_list_empty_tip -->
    <string name="fav_list_empty_tip">还没有收藏任何内容</string>

    <!-- groups -->
    <string name="group_title">用户组</string>
    <string name="group_list_title">用户组</string>
    <string name="group_user_info_title">用户信息</string>

    <!-- plans -->
    <string name="plans_title">计划</string>
    <string name="plans_my_plans">我的学习计划</string>
    <string name="plans_add_plans_title">添加课程</string>
    <string name="plans_add_plans">添加到计划</string>
    <string name="plans_cancel_plans">从计划中取消</string>
    <string name="plans_show">显示计划</string>

    <string name="now_loading">正在载入…</string>
    <string name="app_method_not_define_exception">功能方法未定义</string>
    <string name="app_intent_connection_exception">网络连接错误</string>
    <string name="app_authenticate_exception">用户身份验证错误</string>
    <string name="app_unknown_exception">网络连接失败</string>

    <string name="add_courses_desc">点击 + 号\n添加课程\n到学习计划</string>
    <string name="javascript_desc">属于网络时代的\n世界上最流行的脚本语言</string>

    <string name="submit">提交</string>
    <string name="app_new">new</string>
    <string name="edit">编辑</string>
    <string name="search_text">搜索</string>
    <string name="placeholder">占位</string>
    <string name="image_description">image_description</string>

    <string name="menu_settings">Settings</string>
    <item type="id" name="adapter_item_tag" />
</resources>