<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/body" 
    android:background="@android:color/background_light"
 >
    <RelativeLayout style="@style/head_bar" android:id="@+id/head">
        <ImageButton style="@style/head_bar_button_go_back" android:contentDescription="@string/image_description"/>
        <Button
           android:onClick="on_click_hard_right"
           android:id="@+id/data_list_save_bn"
           android:text="@string/edit"
           style="@style/head_bar_button_right"
           android:background="@drawable/bg_button_head_green_bar"
        />
        
       <TextView
           android:text="@string/category_home"
           android:id="@+id/head_bar_title_tv"
           style="@style/head_bar_text_center"
        />
    </RelativeLayout>
	
    <RelativeLayout
        android:layout_below="@+id/head"
        android:id="@+id/user_msg"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	>
		<ImageView
	       android:id="@+id/user_avatar"
	       android:layout_width="80dp"
	       android:layout_height="80dp"
	       android:contentDescription="@string/image_description"
	       android:background="@drawable/user_default_avatar_normal"
	       android:layout_margin="10dp" 
	    />
		<TextView
		    android:id="@+id/user_name"
		    style="@style/text"
		    android:text="@string/placeholder"
		    android:layout_toRightOf="@+id/user_avatar"
		    android:layout_marginTop="10dp"
		/>
	</RelativeLayout>
	
    <GridView
        android:layout_below="@+id/user_msg"
	    android:id="@+id/grid_view"
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent" 
	    android:numColumns="3"
	 />
</RelativeLayout>