<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/head_bar"
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:background="#fff">

    <com.eshare_android_preview.base.view.ui.FontAwesomeTextView
        android:id="@+id/button_go_back"
        android:clickable="true"
        android:onClick="go_back"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_height="50dp"
        android:layout_width="50dp"
        android:textColor="#666666"
        android:textSize="20dp"
        android:text="@string/icon_arrow_left"
        />

    <TextView
        android:id="@+id/head_bar_title_tv"
        style="@style/head_bar_text_center"
        android:text="@string/tab_home" />

    <com.eshare_android_preview.base.view.ui.FontAwesomeTextView
        android:id="@+id/button_setting"
        android:clickable="true"
        android:onClick="go_back"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_height="50dp"
        android:layout_width="50dp"
        android:textColor="#666666"
        android:textSize="20dp"
        android:text="@string/icon_cog"
        />

    <RelativeLayout
        android:id="@+id/head_bottom_line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#e0e0e0" />

</RelativeLayout>