<?xml version="1.0" encoding="utf-8"?>
<TabHost
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0" />

            <TabWidget
                android:id="@android:id/tabs"
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.0" />

            <LinearLayout
                android:gravity="bottom"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:id="@id/main_tab_group"
                android:background="#333"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <FrameLayout
                    android:id="@+id/tab_home_btn"
                    android:background="@null"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0">

                    <LinearLayout
                        android:gravity="bottom|center"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tab_home_btn_image"
                            android:layout_marginTop="4dip"
                            android:layout_gravity="top|center_horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/icon_home"
                            android:textColor="@color/tab_btn_text_color"
                            android:gravity="center"
                            android:textSize="20dp"
                            />

                        <TextView
                            android:gravity="bottom|center_horizontal"
                            android:id="@+id/tab_home_btn_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="12.0dip"
                            android:layout_marginBottom="1dp"
                            android:textColor="@color/tab_btn_text_color"
                            android:text="@string/category_home" />
                    </LinearLayout>


                    <LinearLayout
                        android:gravity="top|right|center"
                        android:paddingRight="10.0dip"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <TextView
                            android:id="@+id/tab_home_btn_unread_text"
                            android:textSize="10.0dip"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:background="@drawable/tab_unread_bg"
                            android:visibility="invisible"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@null" />
                    </LinearLayout>


                </FrameLayout>

                <FrameLayout
                    android:id="@+id/tab_message_btn"
                    android:background="@null"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0">

                    <LinearLayout
                        android:gravity="bottom|center"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tab_message_btn_image"
                            android:layout_marginTop="4dip"
                            android:layout_gravity="top|center_horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/icon_envelope"
                            android:textColor="@color/tab_btn_text_color"
                            android:gravity="center"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/tab_message_btn_text"
                            android:gravity="bottom|center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="12.0dip"
                            android:layout_marginBottom="1dp"
                            android:textColor="@color/tab_btn_text_color"
                            android:text="@string/category_message" />
                    </LinearLayout>


                    <LinearLayout
                        android:gravity="top|right|center"
                        android:paddingRight="10.0dip"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <TextView
                            android:id="@+id/tab_message_btn_unread_text"
                            android:textSize="10.0dip"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:background="@drawable/btn_cd84234_circle_flat"
                            android:visibility="invisible"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_marginTop="3dp"
                            android:text="@null" />
                    </LinearLayout>


                </FrameLayout>


                <FrameLayout
                    android:id="@+id/tab_about_btn"
                    android:background="@null"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0">

                    <LinearLayout
                        android:gravity="bottom|center"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tab_about_btn_image"
                            android:layout_marginTop="4dip"
                            android:layout_gravity="top|center_horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/icon_info_circle"
                            android:textColor="@color/tab_btn_text_color"
                            android:gravity="center"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/tab_about_btn_text"
                            android:gravity="bottom|center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="12.0dip"
                            android:layout_marginBottom="1dp"
                            android:textColor="@color/tab_btn_text_color"
                            android:text="@string/category_about" />
                    </LinearLayout>

                    <LinearLayout
                        android:gravity="top|right|center"
                        android:paddingRight="10.0dip"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <TextView
                            android:id="@+id/tab_about_btn_unread_text"
                            android:textSize="10.0dip"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:background="@drawable/tab_unread_bg"
                            android:paddingLeft="6.0dip"
                            android:paddingRight="6.0dip"
                            android:visibility="invisible"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_new" />
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</TabHost>