<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/cell_head_bar" />

    <RelativeLayout
        android:layout_below="@+id/head_bar"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/content"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:padding="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/javascript_icon"
                android:layout_height="40dp"
                android:layout_width="40dp"
                android:background="@drawable/lan_js"
                android:layout_marginRight="10dp" />

            <TextView
                android:id="@+id/kn_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/btn_light_green_circle_flat"
                android:text="@string/icon_leaf"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="22dp"
                android:layout_marginRight="20dp"
                android:textColor="#EBFE9B"></TextView>

            <TextView
                android:id="@+id/kn_name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/placeholder"
                android:textSize="20dp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/h_line_1dp"
            android:layout_below="@+id/content"
            android:layout_height="1dp"
            android:layout_width="fill_parent"
            android:background="#E0E0E0"></RelativeLayout>

        <LinearLayout
            android:id="@+id/notes_page"
            android:layout_below="@+id/h_line_1dp"
            android:background="#ffffff"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:paddingTop="5dp"
            android:orientation="horizontal"
            >

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                >

                <TextView
                    android:id="@+id/add_note_icon"
                    android:onClick="click_notes"
                    android:background="@drawable/btn_c4f9cd4_circle_flat"
                    android:text="@string/icon_pencil"
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:textSize="30dp"
                    android:textColor="#fff"
                    android:clickable="true"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                >

                <TextView
                    android:id="@+id/add_fav_icon"
                    android:onClick="add_favourite"
                    android:background="@drawable/btn_c4f9cd4_circle_flat"
                    android:text="@string/icon_star"
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:textSize="30dp"
                    android:textColor="#fff"
                    android:clickable="true"
                    />

                <TextView
                    android:id="@+id/cancel_fav_icon"
                    android:onClick="cancel_favourite"
                    android:background="@drawable/btn_c4f9cd4_circle_flat"
                    android:text="@string/icon_star"
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:textSize="30dp"
                    android:textColor="#FEE9A2"
                    android:visibility="gone"
                    android:clickable="true"
                    />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/shwo_itme_msg"
            android:layout_below="@+id/notes_page"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fff">

            <RelativeLayout
                android:layout_height="40dp"
                android:layout_width="fill_parent">

                <LinearLayout
                    android:layout_height="30dp"
                    android:layout_width="fill_parent"
                    android:background="#63CAFB"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"></LinearLayout>

                <TextView
                    android:id="@+id/kn_prev_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/btn_blue_circle_flat"
                    android:text="@string/icon_chevron_circle_left"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="#fff"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="1dp" />

                <TextView
                    android:id="@+id/kn_next_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/btn_blue_circle_flat"
                    android:text="@string/icon_chevron_circle_right"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="#fff"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="1dp" />

                <TextView
                    android:layout_toRightOf="@+id/kn_prev_icon"
                    android:layout_height="30dp"
                    android:layout_width="wrap_content"
                    android:text="前置知识"
                    android:textColor="#fff"
                    android:layout_marginTop="6dp"
                    android:gravity="center"
                    android:textSize="12dp" />

                <TextView
                    android:layout_toLeftOf="@+id/kn_next_icon"
                    android:layout_height="30dp"
                    android:layout_width="wrap_content"
                    android:text="后续知识"
                    android:textColor="#fff"
                    android:layout_marginTop="6dp"
                    android:gravity="center"
                    android:textSize="12dp" />

            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_below="@+id/shwo_itme_msg"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:background="#e7e7e7">

            <GridView
                android:id="@+id/children_grid_view"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                tools:listitem="@layout/kn_knowledge_net_node_list_item"
                android:verticalSpacing="5dp"
                android:padding="5dp"
                android:layout_marginRight="-3dp"
                android:paddingTop="0dp"
                android:fadingEdge="none" />

            <GridView
                android:id="@+id/parents_grid_view"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                tools:listitem="@layout/kn_knowledge_net_node_list_item"
                android:verticalSpacing="5dp"
                android:padding="5dp"
                android:layout_marginLeft="-3dp"
                android:paddingTop="0dp"
                android:fadingEdge="none" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/progress"
            android:layout_below="@+id/shwo_itme_msg"
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:layout_marginTop="-85dp"
            android:background="@drawable/btn_white_circle_flat"
            android:layout_centerHorizontal="true"
            android:padding="5dp">

            <RelativeLayout
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:background="@drawable/btn_blue_circle_flat"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_height="fill_parent"
                    android:layout_width="fill_parent"
                    android:background="@drawable/btn_light_blue_circle_flat">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="75%"
                        android:textSize="24dp"
                        android:textStyle="bold"
                        android:textColor="#1e3c4b" />

                </RelativeLayout>

            </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>